# goose-rs

./: .gitignore  Cargo.toml  PROMPT.md  README.md  ralph.yml
.ralph/: current-events  current-loop-id  events-20260608-160204.jsonl  events-20260608-160222.jsonl  history.jsonl
.ralph/agent/: scratchpad.md  summary.md  tasks.jsonl
src/: convert.rs  ddg.rs  files.rs  geocode.rs  grid.rs  lib.rs  main.rs
test/: valid.py
