[package]
name = "goose"
version = "0.1.0"
authors = ["natefduncan <natefduncan@gmail.coM>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.4", features = ["json"] }
tokio = { version = "1", features = ["full"] }
geo = "0.18.0"
geo-types = "0.7.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3.15" 
geocoding = { version = "*", default-features = false, features = ["rustls-tls"] }
clap = "2.33.3"
csv = "1.1"
indicatif = "0.16.2"
console = "0.14.1"